--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3881,15 +3881,79 @@ nav {
     background: #3b3b58;
     color: white; }
 
-.callout {
-  border-radius: 4px;
-  background: #fafafa; }
-
 .btnmrg {
   margin-top: 25px;
-  padding-bottom: 11px; }
+  padding-bottom: 10px;
+  margin-right: 10px; }
 
 .panel-blue {
   background: #bee5ff; }
+
+.mrg-right {
+  margin-right: 10px; }
+
+.mrg-left {
+  margin-left: 10px; }
+
+.callout {
+  border: 2px solid #3b3b58;
+  background: none;
+  border-radius: 3px; }
+
+.callout textarea,
+.callout input:focus,
+.callout input {
+  border: 2px solid #3b3b58;
+  color: #3b3b58; }
+
+.button.hollow {
+  border: 2px solid #3b3b58;
+  color: #3b3b58; }
+
+.button.hollow.success {
+  border: 2px solid #3b3b58;
+  color: #3b3b58; }
+
+.button.hollow.alert {
+  border: 2px solid #3b3b58;
+  color: #3b3b58; }
+
+.button.hollow.alert:hover,
+.button.hollow.alert:focus,
+.button.hollow.success:hover,
+.button.hollow.success:focus,
+.button.hollow:hover,
+.button.hollow:focus {
+  border: 2px solid #3b3b58;
+  background: #3b3b58;
+  color: white; }
+
+::-webkit-input-placeholder {
+  color: #757797; }
+
+:-moz-placeholder {
+  color: #757797; }
+
+::-moz-placeholder {
+  color: #757797; }
+
+:-ms-input-placeholder {
+  color: #757797; }
+
+.news-create textarea {
+  height: 200px; }
+
+.news-create input {
+  width: 100%; }
+
+.news-item {
+  background: #3b3b58;
+  color: white; }
+
+.news-shortdesc {
+  color: #6d6da7; }
+
+.over-h {
+  overflow: hidden; }
 
 /*# sourceMappingURL=app.css.map */
